# worker

./: .gitignore  .golangci.yml  .goreleaser.yml  Cargo.toml  Dockerfile  Dockerfile-goreleaser  LICENSE  README.md  go.mod  go.sum  main.go  worker.go  worker_test.go
.github/workflows/: ci.yml  release.yml
cmd/: cmd.go
config/: config.yml
proto/: asset.pb.go  asset.proto  asset_grpc.pb.go  build.pb.go  build.proto  build_grpc.pb.go  log.pb.go  log.proto  log_grpc.pb.go  proto.sh
script/: build.sh  docker.sh  test.sh
src/arg/: arg.rs
src/config/: config.yml
test/java/: Main.java  Makefile  Worker.java  build.gradle  gradle.sh  make.sh  maven.sh  pom.xml
tests/: invalid.yml
