[package]
name = "worker"
version = "0.0.1"
edition = "2021"
authors = ["Jia Jia <angersax@sina.com>"]
include = [
    "src/**/*",
    "Cargo.toml",
    "README.md"
]
description = "build worker"
repository = "https://github.com/distbuild/worker"
documentation = "https://github.com/distbuild/worker"
homepage = "https://github.com/distbuild/worker"
keywords = ["build", "worker"]
categories = ["build"]
license = "Apache-2.0"
readme = "README.md"

[[bin]]
name = "worker"
path = "src/main.rs"

[dependencies]
clap = "3.0"
serde = "1.0"
serde_derive = "1.0"
serde_yaml = "0.8"

[badges]
maintenance = { status = "actively-developed" }
